# angular-example

./: .gitignore  Dockerfile  README.md  app.js  db.py  db_methods.py  docker-compose.yml  index.html  pyproject.toml  server.py
.github/workflows/: tests.yml
pages/: app.js  register.html  users.html
pages/js/: app.js
pages/styles/: style.css
