[tool.poetry]
name = "angular-example"
version = "0.1.0"
description = ""
authors = ["Eduard0803 <eduardo83204gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
pydantic = "^2.5.2"
uvicorn = "^0.24.0.post1"
black = "^23.12.0"
isort = "^5.13.2"
pytest = "^7.4.3"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
